--- a/src/options/Options.css
+++ b/src/options/Options.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
     'Open Sans', 'Helvetica Neue', sans-serif;
   max-width: 1280px;
@@ -45,4 +45,4 @@ a {
   h3 {
     max-width: none;
   }
-}
+} */
